--- a/AnimationDemo/AnimationDemo/MainPage.xaml
+++ b/AnimationDemo/AnimationDemo/MainPage.xaml
@@ -6,10 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loading="Page_Loading">
 
     <Grid x:Name="layoutRoot">
-        <Ellipse Fill="SteelBlue" Height="200" Width="200" />
-
+        <TextBlock x:Name="TimerLog" HorizontalAlignment="Left" Margin="28,25,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Height="165" Width="511"/>
     </Grid>
 </Page>
